--- a/index.html
+++ b/index.html
@@ -4,9 +4,165 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Weather App</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" 
+    rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" 
+    crossorigin="anonymous">
+    <link rel="stylesheet" href="src/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+<script src="https://kit.fontawesome.com/39333be9ee.js" crossorigin="anonymous"></script>
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </head>
 <body>
-    Hello 
+<div class="container">
+    <div class="card" style="width: 36rem;">
+        <div class="card-body">
+            <div class="row">
+                 <section class="col-8 main">
+                    <div id="city">
+                        BERLIN
+                    </div>
+                    <div id="day">
+                        FRIDAY
+                    </div>
+                    <div id="time">
+                        16:00
+                    </div>
+                    <span class="currenttemprature" id="currenttemprature">
+                        10
+                    </span>
+                    <span class="currenttemprature" id="temperaturesymbol">°C</span>
+                    <div>
+                       <span class="currentweather" id="currentweather"> RAINY </span>
+                    </div>
+                    <div>
+                        FEELS LIKE <br />
+                            <span class="feelstemprature" id="feelstemprature">5</span>
+                            <span class="feelstemprature" id="feelstempraturesymbol">°C</span>
+                    </div>
+                </section>
+                <section class="col-4">
+                    <button class="temperaturechoose" id="fahrenheit">F</button>
+                    <button class="temperaturechoose" id="celcius">C</button>
+                    <br />
+                    <i class="fas fa-cloud-sun-rain bigicon"></i>
+                </section>
+            </div>
+            <hr>
+            <section class="nextdays">
+            <div class="row row-cols-5">
+                <div class="col">
+                    <div class="card smallweathercard" style="width: 100px;">
+                        <div class="card-body">
+                            <div class="smallday">
+                                SAT
+                            </div>
+                             <div class="smallweather">
+                                SUNNY
+                            </div>
+                            <span class="smallicon">
+                            <i class="fas fa-sun"></i></span>
+                            <div class="smalltemp">
+                                <span class="warmest"> 20°C </span> <span class="coldest"> 15°C </span> 
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card smallweathercard" style="width: 100px;">
+                        <div class="card-body">
+                            <div class="smallday">
+                                SUN
+                            </div>
+                             <div class="smallweather">
+                                RAINY
+                            </div>
+                            <span class="smallicon">
+                            <i class="fas fa-cloud-rain"></i></span>
+                            <div class="smalltemp">
+                                <span class="warmest"> 20°C </span> <span class="coldest"> 15°C </span> 
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card smallweathercard" style="width: 100px;">
+                        <div class="card-body">
+                            <div class="smallday">
+                                MON
+                            </div>
+                             <div class="smallweather">
+                                SNOWY
+                            </div>
+                            <span class="smallicon">
+                            <i class="fas fa-cloud-meatball"></i></span>
+                            <div class="smalltemp">
+                                <span class="warmest"> 20°C </span> <span class="coldest"> 15°C </span> 
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card smallweathercard" style="width: 100px;">
+                        <div class="card-body">
+                            <div class="smallday">
+                                TUE
+                            </div>
+                             <div class="smallweather">
+                                SMOGY
+                            </div>
+                            <span class="smallicon">
+                            <i class="fas fa-smog"></i> </span>
+                            <div class="smalltemp">
+                                <span class="warmest"> 20°C </span> <span class="coldest"> 15°C </span> 
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card smallweathercard" style="width: 100px;">
+                        <div class="card-body">
+                            <div class="smallday">
+                                WED
+                            </div>
+                             <div class="smallweather">
+                                CLOUDY
+                            </div>
+                            <span class="smallicon">
+                            <i class="fas fa-cloud"></i></i> </span>
+                            <div class="smalltemp">
+                                <span class="warmest"> 20°C </span> <span class="coldest"> 15°C </span> 
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            </section>   
+            <hr>
+            <form id="search-form">
+                <div class="row">
+                    <div class="col-6">
+                        <input type="search" class="form-control" placeholder="City" id="city-input" />
+                    </div>
+                    <div class="col-3">
+                        <input type="submit" value="search" class="btn btn-light col-3 w-100" />
+                    </div>
+                    <div class="col-3">
+                        <button class="btn btn-success w-100" id="current-location-button"> current </button>
+                    </div>
+                </div>
+            </form>
+            <hr>
+            <div class="advice">
+                YEP, SHI*TY WEATHER. BUT YOU CAN ALWAYS WORKOUT INSIDE!
+            </div>
+        </div>
+    </div>
+</div>
+<script src="js/index.js"></script>
 </body>
 </html>
