added coded by styling and link

--- a/index.html
+++ b/index.html
@@ -163,7 +163,10 @@
         </div>
     </div>
 </div>
-Open-source code by Ania Moskal 
+<div class="codedby">
+    <span class="codedbyref" href="https://github.com/AniaMoskal/weather_app.git">
+        Open-source code 
+    </span>by Ania Moskal</div>
 <script src="js/index.js"></script>
 </body>
 </html>
