edited styling and fixed link to coded by

--- a/index.html
+++ b/index.html
@@ -164,9 +164,9 @@
     </div>
 </div>
 <div class="codedby">
-    <span class="codedbyref" href="https://github.com/AniaMoskal/weather_app.git">
-        Open-source code 
-    </span>by Ania Moskal</div>
+    <a class="codedbyref" href="https://github.com/AniaMoskal/weather_app.git">
+        Open-source code </a>
+    by Ania Moskal</div>
 <script src="js/index.js"></script>
 </body>
 </html>
