--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
     </div>
 </div>
 <div class="codedby">
-    <a class="codedbyref" href="https://github.com/AniaMoskal/weather_app.git">
+    <a class="codedbyref" href="https://github.com/AniaMoskal/weather_app.git" target="_blank">
         Open-source code </a>
     by Ania Moskal</div>
 <script src="js/index.js"></script>
