--- a/index.html
+++ b/index.html
@@ -167,6 +167,6 @@
     <a class="codedbyref" href="https://github.com/AniaMoskal/weather_app.git" target="_blank">
         Open-source code </a>
     by Ania Moskal</div>
-<script src="crs/app.js"></script>
+<script src="src/app.js"></script>
 </body>
 </html>
