--- a/index.html
+++ b/index.html
@@ -51,9 +51,10 @@
                     <button class="temperaturechoose" id="fahrenheit">F</button>
                     <!--<img src="http://openweathermap.org/img/wn/10d@2x.png" alt="weathericon"class="bigicon" id="bigicon"> <br />-->
                     <i class="wi wi-owm-232 bigicon" id="bigicon"></i>
-                    <div class="additionalinformation">wind speed: 100 km/h</div>
-                    <div class="additionalinformation">humidity: 95%</div>
-                    <div class="additionalinformation">precipitation: 30%</div>
+                    <div class="additionalinformation">wind speed: <span id="wind">100 </span> km/h</div>
+                    <div class="additionalinformation">humidity: <span id="humidity">95</span> %</div>
+                    <div class="additionalinformation">sunrise: <span id="sunrise"> 30%</span></div>
+                    <div class="additionalinformation">sunset: <span id="sunset"> 30%</span></div>
                 </section>
             </div>
             <hr>
