--- a/index.html
+++ b/index.html
@@ -23,41 +23,54 @@
     <div class="card" style="width: 36rem;">
         <div class="card-body">
             <div class="row">
-                 
-                 <div class="cityname" id="city">
-                        BERLIN
-                    </div>
-                 <section class="col-8 main">
-                    <div id="day">
-                        FRIDAY
-                    </div>
-                    <div id="time">
-                        16:00
-                    </div>
-                    <span class="currenttemprature" id="currenttemprature">
-                        10
-                    </span>
-                    <span class="currenttemprature" id="temperaturesymbol">°C </span>
-                     <div>
-                       <span class="currentweather" id="currentweather"> RAINY </span>
-                    </div>
-                    <div>
-                        FEELS LIKE <br />
-                            <span class="feelstemprature" id="feelstemprature">5</span>
-                            <span class="feelstemprature" id="feelstempraturesymbol">°C</span>
-                    </div>
-                </section>
-                <section class="col-4">
-                      <button class="temperaturechoose" id="celcius">C</button>
+                 <section class="col-12 main">
+                    <button class="temperaturechoose" id="celcius">C</button>
                     <button class="temperaturechoose" id="fahrenheit">F</button>
-                    <!--<img src="http://openweathermap.org/img/wn/10d@2x.png" alt="weathericon"class="bigicon" id="bigicon"> <br />-->
-                    <i class="wi wi-owm-232 bigicon" id="bigicon"></i>
-                    <div class="additionalinformation">wind speed: <span id="wind">100 </span> km/h</div>
-                    <div class="additionalinformation">humidity: <span id="humidity">95</span> %</div>
-                    <div class="additionalinformation">sunrise: <span id="sunrise"> 30%</span></div>
-                    <div class="additionalinformation">sunset: <span id="sunset"> 30%</span></div>
-                  
+                    <div class="maindata">
+                        <div class="cityname" id="city">
+                            BERLIN
+                        </div>
+                        <div id="day">
+                            FRIDAY
+                        </div>
+                        <div>
+                           <span class="currentweather" id="currentweather"> RAINY </span>
+                         </div>
+                     <!--<img src="http://openweathermap.org/img/wn/10d@2x.png" alt="weathericon"class="bigicon" id="bigicon"> <br />-->
+                         <i class="wi wi-owm-232 bigicon" id="bigicon"></i>
+                         <div>
+                            <span class="currenttemprature" id="currenttemprature">10</span>
+                            <span class="currenttemprature" id="temperaturesymbol">°C</span>
+                        </div>
+                    </div>
                 </section>
+            </div>
+            <hr>
+            <div class="row">
+            <section class="col-3 adds">
+                <div> <span>Time</span> <span id="time" class="time results"> 16:00 </span></div>
+                <div class="feelslike"> FEELS 
+                    <span class="feelstemprature results" id="feelstemprature">5</span>
+                    <span class="feelstemprature results" id="feelstempraturesymbol">°C</span>
+            </section>
+            <section class="col-3 adds">
+                <div>sunrise <span id="sunrise" class="results">30%</span></div>
+                <div>sunset <span id="sunset" class="results">30%</span></div>
+            </section>
+            <section class="col-3 adds">
+                <div class="feelslike">Min temp
+                    <span id="mintemp" class="results">2</span>
+                    <span class="results" id="temperatureminsymbol">°C</span>
+                </div>
+                <div class="feelslike">Max temp
+                    <span id="maxtemp" class="results">4</span>
+                    <span class="results" id="temperaturemaxsymbol">°C</span>
+                </div>
+            </section>
+           <section class="col-3 adds">
+                <div class="addstwo">wind <span id="wind" class="results">100 </span><span class="results"> km/h</span></div>
+                <div class="addstwo">humidity <span id="humidity" class="results">95</span> <span class="results"> %</span></div>
+           </section>
             </div>
             <hr>
             <section class="nextdays">
